--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </a>
   
           <button class="navbar-toggler toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <i class='bx bxl-xing'></i>
+            <i class='bx bx-menu-alt-right'></i>
           </button>
   
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
