--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       crossorigin="anonymous"
     />
 
+    <!-- favicon --->
+    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet" href="style.css" />
