--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <!----------------- hero ---------------->
         <div class="row gy-5">
           <div class="col-lg-6 text-white">
-            <h1 class="hero-header mt-5">رئيس فرع رابطة الطلاب المحمدية بمدرسة دار الإحسان المحمدية الإعدادية سراجن</h1>
+            <h1 class="hero-header mt-5">PR IPM SMP Darul Ihsan Muh. Seagen</h1>
             <p class="hero-subheader mt-3">Pimpinan Ranting Ikatan Pelajar Muhammadiyah SMP Darul Ihsan MUH. Sragen KE- 26</p>
 
             <div class="hero-cto mt-5">
